--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 h1 {
   font-size: 40px;
-  color: #F5A623;
+  color: #AD655F;
   line-height: 48px;
   display: inline;
 }
@@ -82,7 +82,7 @@ a {
 .welcome-message {
   font-style: italic;
   font-size: 18px;
-  color: #F3F3F3;
+  color: #000000;
   line-height: 28px;
 }
 
@@ -116,7 +116,7 @@ a {
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-color: #f4f4f4;
 }
 
 .flex-box {
