--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h2 {
   color: #999999;
   line-height: 29px;
   padding: 10px;
+  
 }
 
 h3 {
@@ -80,14 +81,14 @@ a {
 }
 
 .welcome-message {
-  font-style: italic;
-  font-size: 18px;
+  font-size: 14px;
   color: #000000;
   line-height: 28px;
 }
 
 #skillsH3 {
   color: #F5AE23;
+  font-size: 18px;
   display: none;
 }
 
@@ -105,7 +106,7 @@ a {
 }
 
 .gray {
-  background-color: #F3F3F3;
+  background-color: #f4f4f4;
   padding-bottom: 10px;
   clear:both;
 }
