--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,10 @@
 }
 
 .project-url{
-   padding-loft 40px;
+   padding-left 40px;
    font: 12px;
+   font-weight: bold;
+   
 
 }
    
@@ -38,7 +40,7 @@ h2 {
 h3 {
   font-style: italic;
   font-size: 20px;
-  color: #000000;
+  color: #999;
   line-height: 22px;
 }
 
